--- a/tasks/ubuntu-packages.yml
+++ b/tasks/ubuntu-packages.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: Install eza dependencies on Ubuntu/WSL
+    include_tasks: install-eza-dependencies-ubuntu.yml
+
 # Update apt cache
 - name: Update apt cache
   ansible.builtin.apt:
@@ -19,33 +22,4 @@
     - zsh-syntax-highlighting
     - zsh-autosuggestions
     - gpg
-
-# Install eza
-- name: Install eza dependencies
-  ansible.builtin.apt:
-    name: "{{ item }}"
-    state: latest
-  with_items:
-    - curl
-    - build-essential
-    - libssl-dev
-    - pkg-config
-
-- name: Download eza
-  ansible.builtin.command:
-    cmd: curl -fsSL https://github.com/eza-community/eza/releases/download/v0.10.1/eza-v0.10.1-x86_64-unknown-linux-gnu.tar.gz -o /tmp/eza.tar.gz
-
-- name: Extract eza
-  ansible.builtin.unarchive:
-    src: /tmp/eza.tar.gz
-    dest: /usr/local/bin/
-    remote_src: yes
-
-- name: Verify eza installation
-  ansible.builtin.command:
-    cmd: /usr/local/bin/eza --version
-  register: eza_version
-
-- name: Print eza version
-  ansible.builtin.debug:
-    msg: "eza version: {{ eza_version.stdout }}"
+    - eza
