--- a/tasks/ubuntu-packages.yml
+++ b/tasks/ubuntu-packages.yml
@@ -1,7 +1,28 @@
 ---
 
-- name: Install eza dependencies on Ubuntu/WSL
-    include_tasks: install-eza-dependencies-ubuntu.yml
+# Install eza dependencies
+- name: Ensure keyring directory exists
+  ansible.builtin.file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: '0755'
+
+- name: Download and install the GPG key for eza (force overwrite)
+  ansible.builtin.shell: |
+    yes | wget -qO- https://raw.githubusercontent.com/eza-community/eza/main/deb.asc | gpg --dearmor > /etc/apt/keyrings/gierens.gpg
+  args:
+    warn: false  # Suppress non-critical warnings like overwriting files
+
+- name: Add eza repository to sources list
+  ansible.builtin.copy:
+    dest: /etc/apt/sources.list.d/gierens.list
+    content: "deb [signed-by=/etc/apt/keyrings/gierens.gpg] http://deb.gierens.de stable main"
+    mode: '0644'
+
+- name: Ensure keyring file has correct permissions
+  ansible.builtin.file:
+    path: /etc/apt/keyrings/gierens.gpg
+    mode: '0644'
 
 # Update apt cache
 - name: Update apt cache
