--- a/test.yml
+++ b/test.yml
@@ -5,6 +5,8 @@
   become: true        # Required for sudo on Ubuntu
 
   tasks:
-    - name: Ensure ~/.zshrc is properly initialized
-      ansible.builtin.shell: |
-        echo '\nconda activate PyEnv3.9' >> {{ ansible_env.HOME }}/.zshrc
+    - name: Append conda activate to .zshrc
+      ansible.builtin.lineinfile:
+        path: "{{ ansible_env.HOME }}/.zshrc"
+        line: 'conda activate PyEnv3.9'
+        create: yes
