--- a/tasks/install-python.yml
+++ b/tasks/install-python.yml
@@ -15,12 +15,12 @@
       include_tasks: python/conda-ubuntu.yml
       when: ansible_facts['os_family'] == 'Debian'
 
-    - name: Initialize conda
-      ansible.builtin.shell: $HOME/miniconda/bin/conda init
+    #- name: Initialize conda
+    #  ansible.builtin.shell: $HOME/miniconda/bin/conda init
 
-    - name: Create Python 3.9 environment
-      ansible.builtin.shell: $HOME/miniconda/bin/conda create --name PyEnv3.9 python=3.9 -y
+    #- name: Create Python 3.9 environment
+    #  ansible.builtin.shell: $HOME/miniconda/bin/conda create --name PyEnv3.9 python=3.9 -y
 
-    - name: Reload ~/.zshrc
-      ansible.builtin.shell: source ~/.zshrc
+   # - name: Reload ~/.zshrc
+   #   ansible.builtin.shell: source ~/.zshrc
     
